ESLint and server fixes: format main.js interactions; harden TMDB API client; improve server error logging; ignore env backups

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ build/
 NETLIFY_API_KEY_UPDATE.md
 SECURITY_FIX_COMPLETE.md
 update-api-key.bat
-server/.env.backup
+server/.env.backup*
 
 # Redis dump
 dump.rdb
