fix: correct Node.js package name in nixpacks.toml for Railway deployment
Railway deployment was failing with error:
  error: undefined variable 'nodejs-22_x'

Changes:
- Fix nixpacks.toml: Change 'nodejs-22_x' to 'nodejs' (valid Nix package)
- Add Procfile as backup deployment method
- Simplify nixpacks configuration
- Add comprehensive fix documentation

This resolves the Nixpacks build error and allows Railway to:
- Properly install Node.js
- Run npm install successfully
- Start the server with node server.js

The fix directly addresses the error shown in Railway build logs.

--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -1,11 +1,8 @@
 [phases.setup]
-nixPkgs = ["nodejs-22_x"]
+nixPkgs = ["nodejs"]
 
 [phases.install]
 cmds = ["npm install"]
-
-[phases.build]
-cmds = ["echo 'No build step needed'"]
 
 [start]
 cmd = "node server.js"
