fix: resolve critical issues across codebase

--- a/server/.env.example
+++ b/server/.env.example
@@ -77,6 +77,14 @@ PESAPAL_CALLBACK_URL=http://localhost:5000/api/payments/callback
 PESAPAL_IPN_URL=http://localhost:5000/api/payments/ipn
 
 # ================================
+# Google OAuth Configuration
+# ================================
+# Get credentials from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-google-client-id-here.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret-here
+GOOGLE_CALLBACK_URL=http://localhost:5000/api/auth/google/callback
+
+# ================================
 # Email Configuration (Optional)
 # ================================
 EMAIL_HOST=smtp.gmail.com
