fix(security): add CORS headers and update CSP directives

--- a/server/.env.example
+++ b/server/.env.example
@@ -31,7 +31,7 @@ SESSION_SECRET=your-session-secret-key-change-this-in-production
 # CORS Configuration
 # ================================
 # Comma-separated list of allowed origins
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5000,https://lugandamovies.com,https://www.lugandamovies.com
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5000,https://watch.unrulymovies.com,https://unrulymovies.com,https://www.unrulymovies.com,https://lugandamovies.com,https://www.lugandamovies.com
 
 # Client URL (frontend)
 CLIENT_URL=http://localhost:3000
