--- a/manifest.json
+++ b/manifest.json
@@ -9,52 +9,16 @@
     "orientation": "any",
     "icons": [
         {
-            "src": "assets/images/icons/icon-72x72.png",
-            "sizes": "72x72",
-            "type": "image/png",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "assets/images/icons/icon-96x96.png",
-            "sizes": "96x96",
-            "type": "image/png",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "assets/images/icons/icon-128x128.png",
-            "sizes": "128x128",
-            "type": "image/png",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "assets/images/icons/icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image/png",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "assets/images/icons/icon-152x152.png",
-            "sizes": "152x152",
-            "type": "image/png",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "assets/images/icons/icon-192x192.png",
+            "src": "assets/images/logo.png",
             "sizes": "192x192",
             "type": "image/png",
-            "purpose": "maskable any"
+            "purpose": "any"
         },
         {
-            "src": "assets/images/icons/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "assets/images/icons/icon-512x512.png",
+            "src": "assets/images/logo.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "maskable any"
+            "purpose": "any"
         }
     ],
     "screenshots": [
@@ -78,22 +42,19 @@
             "name": "Browse Movies",
             "short_name": "Movies",
             "description": "Browse all Luganda movies",
-            "url": "/movies.html",
-            "icons": [{ "src": "assets/images/icons/movies-icon.png", "sizes": "96x96" }]
+            "url": "/movies.html"
         },
         {
             "name": "My Watchlist",
             "short_name": "Watchlist",
             "description": "View your saved movies",
-            "url": "/dashboard.html",
-            "icons": [{ "src": "assets/images/icons/watchlist-icon.png", "sizes": "96x96" }]
+            "url": "/dashboard.html"
         },
         {
             "name": "Search",
             "short_name": "Search",
             "description": "Search for movies",
-            "url": "/search.html",
-            "icons": [{ "src": "assets/images/icons/search-icon.png", "sizes": "96x96" }]
+            "url": "/search.html"
         }
     ],
     "categories": ["entertainment", "video"],
