--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed:vjs": "node seeds/vjSeeder.js",
+    "seed:movies": "node seeds/movieSeeder.js",
+    "seed:all": "node seeds/vjSeeder.js && node seeds/movieSeeder.js",
     "test:mongodb": "node tests/testMongoDB.js",
     "test:tmdb": "node tests/testTMDB.js",
     "test:scraper": "node tests/testScraper.js",
