--- a/package.json
+++ b/package.json
@@ -6,14 +6,38 @@
   "scripts": {
     "start": "node server/server.js",
     "dev": "cd server && npm run dev",
-    "check:api": "bash ./scripts/check_api_proxy.sh",
-    "postinstall": "cd server && npm install"
+    "check:api": "bash ./scripts/check_api_proxy.sh"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
+    "compression": "^1.7.4",
+    "connect-mongo": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
-    "mongodb": "^7.0.0"
+    "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "google-auth-library": "^10.5.0",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "mongodb": "^7.0.0",
+    "morgan": "^1.10.0",
+    "nodemailer": "^7.0.11",
+    "redis": "^5.10.0",
+    "response-time": "^2.3.4",
+    "stripe": "^14.25.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
