--- a/manifest.json
+++ b/manifest.json
@@ -4,21 +4,57 @@
     "description": "A legitimate Ugandan platform for Luganda translated movies by licensed Video Jockeys (VJs). Developed by Nduga Hafizu.",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#0d0d0d",
+    "background_color": "#0a0a0f",
     "theme_color": "#7CFC00",
     "orientation": "any",
     "icons": [
         {
-            "src": "assets/images/logo.png",
-            "sizes": "192x192",
+            "src": "/assets/images/icons/icon-72x72.png",
+            "sizes": "72x72",
             "type": "image/png",
-            "purpose": "any"
+            "purpose": "any maskable"
         },
         {
-            "src": "assets/images/logo.png",
+            "src": "/assets/images/icons/icon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/assets/images/icons/icon-128x128.png",
+            "sizes": "128x128",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/assets/images/icons/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/assets/images/icons/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/assets/images/icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/assets/images/icons/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/assets/images/icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "any"
+            "purpose": "any maskable"
         }
     ],
     "screenshots": [
