--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
     "mongodb": "^7.0.0",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.11",
     "redis": "^5.10.0",
@@ -40,5 +40,8 @@
     "uuid": "^10.0.0",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "sharp": "^0.34.5"
   }
 }
